--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -13,8 +13,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 @{
-    var searchBy = Model.SearchBy;
-    var searchInput = Model.SearchInput;
+    //var searchBy = Model.SearchBy;
+    //var searchInput = Model.SearchInput;
     var sortBy = Model.SortBy;
     var sortDir = Model.SortDirection;
     var id = Model.PageNumber;
@@ -84,8 +84,8 @@
             <form name="pageJump">
                 @Html.HiddenFor(m => m.SortBy)
                 @Html.HiddenFor(m => m.SortDirection)
-                @Html.HiddenFor(m => m.SearchBy)
-                @Html.HiddenFor(m => m.SearchInput)
+                <!--Html.HiddenFor(m => m.SearchBy)
+                Html.HiddenFor(m => m.SearchInput) -->
 
                 <div class="block">
                     @Html.Label("Page: ", new { @class = "mylabel" })
@@ -127,7 +127,7 @@
                         sortD = "ASC";
                     }
                     <td>
-                        <input type="button" id="sortButton" value ="@category" onclick="updateButton(1, '@sortB', '@sortD', '@searchBy', '@searchInput')" class="@className" />
+                        <input type="button" id="sortButton" value ="@category" onclick="updateButton(1, '@sortB', '@sortD', /*'searchBy', 'searchInput' */)" class="@className" />
                     </td>
                 }
             </tr>
@@ -170,7 +170,7 @@ else
 <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
-        <button onclick="UpdateImportance()">Update</button>
+        <button onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
     </form>
     <button onclick="closeModal()">Cancel</button>
 </div>
@@ -234,8 +234,12 @@ else
         });
     });
 
-    function UpdateImportance() {
+    function UpdateImportance(page, sortB, sortD) {
+        currentid = page;
+        currentsortBy = sortB;
+        currentsortDir = sortD;
         usernameValue = $("[name=usernameEntry]").val();
+
         debugger;
         var model = {
             UserID: currentUserID,
@@ -266,7 +270,8 @@ else
                 currentSource = null;
 
                 if (result.IsCreated) {
-                    window.location.reload();
+                    //window.location.reload();
+                    updateButton(currentid, currentsortBy, currentsortDir, "", "");
                 }
                 else {
                     alert(result.ErrorMessage);
@@ -325,11 +330,11 @@ else
         var formData = $('form[name="pageJump"]').serializeArray();
         var sortBy = formData[0].value;
         var sortDirection = formData[1].value;
-        var searchBy = formData[2].value;
-        var searchInput = formData[3].value;
-        var page = formData[4].value;
+        //var searchBy = formData[2].value;
+        //var searchInput = formData[3].value;
+        var page = formData[2].value;
 
-        updateButton(page, sortBy, sortDirection, searchBy, searchInput);
+        updateButton(page, sortBy, sortDirection, "", "");
 
     });
 
@@ -365,7 +370,7 @@ else
                 dictionary["searchDictionary[" + index + "].Key"] = key;
                 dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
 
-                if (newSearch && (currentsearchBy == key)) { //update based on new search    
+                if (newSearch && (currentsearchBy == key)) { //update searchDictionary based on new search    
                     dictionary["searchDictionary[" + index + "].Key"] = currentsearchBy;
                     dictionary["searchDictionary[" + index + "].Value"] = currentsearchInput;
                 }
@@ -399,6 +404,7 @@ else
         sortDir.value = currentsortDir;
         form.appendChild(sortDir);
 
+        /*
         const searchBy = document.createElement('input');
         searchBy.hidden = true;
         searchBy.name = 'searchBy';
@@ -409,7 +415,7 @@ else
         searchInput.hidden = true;
         searchInput.name = 'searchInput';
         searchInput.value = currentsearchInput;
-        form.appendChild(searchInput);
+        form.appendChild(searchInput); */
 
         document.body.appendChild(form);
         form.submit();
