--- a/InternshipSkeleton/Views/LogException/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogException/SearchIndex.cshtml
@@ -123,7 +123,7 @@ else
 <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
-        <button onclick="UpdateImportance()">Update</button>
+        <button onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
     </form>
     <button onclick="closeModal()">Cancel</button>
 </div>
@@ -144,7 +144,7 @@ else
     var currentsortBy = null;
     var currentsortDir = null;
     var currentsearchDictionary = @Html.Raw(Json.Encode(searchDict))
-    //var currentModel = Model;
+
 
     function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, MethodName, Source) {
         event.preventDefault;
@@ -170,6 +170,108 @@ else
             exampleModalVisible = false;
         });
     });
+
+    function closeModal() {
+        event.preventDefault;
+
+        currentUserID = null;
+        currentEmailAddress = null;
+        currentTimeStamp = null;
+        currentWebRequestID = null;
+        currentMethodName = null;
+        currentSource = null;
+
+        exampleModal.close();
+    };
+
+    function UpdateImportance(page, sortB, sortD) {
+        currentid = page;
+        currentsortBy = sortB;
+        currentsortDir = sortD;
+        debugger;
+        usernameValue = $("[name=usernameEntry]").val(); 
+
+        var log = {
+            UserID: currentUserID,
+            EmailAddress: currentEmailAddress,
+            TimeStamp: currentTimeStamp,
+            WebRequestID: currentWebRequestID,
+            MethodName: currentMethodName,
+            Source: currentSource,
+        };
+        
+        $.ajax({
+            method: "POST",
+            url: "@Url.Action("UpdateImportance", "LogException")",
+            dataType: "json",
+            data: {
+                username: usernameValue,
+                logToUpdate: log,
+		    },
+
+            success: function (result) {
+                document.getElementById("usernameForm").reset();
+                debugger;
+                currentUserID = null;
+                currentEmailAddress = null;
+                currentTimeStamp = null;
+                currentWebRequestID = null;
+                currentMethodName = null;
+                currentSource = null;
+
+                if (result.IsCreated) {
+                    updateButton(currentid, currentsortBy, currentsortDir);
+                }
+                else {
+                    //updateSuccess();
+                    alert(result.ErrorMessage);
+                }
+            },
+            error: function (result) {
+                alert(result);
+            }
+        }); 
+    };
+
+    function markUnimportant(currentUserID, currentEmailAddress, currentTimeStamp, currentWebRequestID, currentMethodName, currentSource) {
+        var model = {
+            UserID: currentUserID,
+            EmailAddress: currentEmailAddress,
+            TimeStamp: currentTimeStamp,
+            WebRequestID: currentWebRequestID,
+            MethodName: currentMethodName,
+            Source: currentSource,
+        };
+
+        $.ajax({
+            method: "POST",
+            url: "@Url.Action("MarkUnimportant", "LogException")",
+            dataType: "json",
+            data: {
+                logToUpdate: model,
+            },
+
+            success: function (result) {
+                currentUserID = null;
+                currentEmailAddress = null;
+                currentTimeStamp = null;
+                currentWebRequestID = null;
+                currentMethodName = null;
+                currentSource = null;
+
+                if (result.IsCreated) {
+                    window.location.reload();
+                }
+                else {
+                    alert(result.ErrorMessage);
+                }
+            },
+
+            error: function (result) {
+                alert(result.ErrorMessage);
+            }
+        });
+    };
 
     function updateButton(page, sortB, sortD) {
         currentid = page;
@@ -219,171 +321,6 @@ else
 
         document.body.appendChild(form);
         form.submit();
-    };
-
-
-
-    function closeModal() {
-        event.preventDefault;
-
-        currentUserID = null;
-        currentEmailAddress = null;
-        currentTimeStamp = null;
-        currentWebRequestID = null;
-        currentMethodName = null;
-        currentSource = null;
-
-        exampleModal.close();
-    };
-
-
-
-    function UpdateImportance() {
-        debugger;
-        usernameValue = $("[name=usernameEntry]").val();
-
-        var dictionary = {};
-        var index = 0;
-
-        for (var key in currentsearchDictionary) {
-            if (currentsearchDictionary.hasOwnProperty(key)) {
-                dictionary["searchDictionary[" + index + "].Key"] = key;
-                dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
-            }
-            index = index + 1;
-        } 
-
-        var log = {
-            UserID: currentUserID,
-            EmailAddress: currentEmailAddress,
-            TimeStamp: currentTimeStamp,
-            WebRequestID: currentWebRequestID,
-            MethodName: currentMethodName,
-            Source: currentSource,
-        };
-        
-        $.ajax({
-            method: "POST",
-            url: "@Url.Action("UpdateImportance", "LogException")",
-            dataType: "json",
-            data: {
-                username: usernameValue,
-                logToUpdate: log,
-		    },
-
-            success: function (result) {
-                document.getElementById("usernameForm").reset();
-
-                currentUserID = null;
-                currentEmailAddress = null;
-                currentTimeStamp = null;
-                currentWebRequestID = null;
-                currentMethodName = null;
-                currentSource = null;
-
-                if (result.IsCreated) {
-                    //window.location.reload();
-                    updateSuccess();
-                }
-                else {
-                    alert(result.ErrorMessage);
-                }
-            },
-            error: function (result) {
-                //alert(result.ErrorMessage);
-                alert(result);
-            }
-        }); 
-    };
-
-    function updateSuccess() {
-        var currentid = @Model.PageNumber;
-        var currentsortBy = '@Model.SortBy';
-        var currentsortDir = '@Model.SortDirection';
-        var dictionary = {};
-        var index = 0;
-        debugger;
-
-        for (var key in currentsearchDictionary) {
-            if (currentsearchDictionary.hasOwnProperty(key)) {
-                dictionary["searchDictionary[" + index + "].Key"] = key;
-                dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
-            }
-            index = index + 1;
-        }
-
-        const form = document.createElement('form');
-        form.method = 'post';
-        form.action = '/LogException/SearchIndex';
-
-        for (var key in dictionary) {
-            const hiddenField = document.createElement('input');
-            hiddenField.hidden = true;
-            hiddenField.name = key;
-            hiddenField.value = dictionary[key];
-            form.appendChild(hiddenField);
-        }
-
-        const id = document.createElement('input');
-        id.hidden = true;
-        id.name = 'id';
-        id.value = currentid;
-        form.appendChild(id);
-
-        const sortBy = document.createElement('input');
-        sortBy.hidden = true;
-        sortBy.name = 'sortBy';
-        sortBy.value = currentsortBy;
-        form.appendChild(sortBy);
-
-        const sortDir = document.createElement('input');
-        sortDir.hidden = true;
-        sortDir.name = 'sortDir';
-        sortDir.value = currentsortDir;
-        form.appendChild(sortDir);
-
-        document.body.appendChild(form);
-        form.submit();
-    }
-
-    function markUnimportant(currentUserID, currentEmailAddress, currentTimeStamp, currentWebRequestID, currentMethodName, currentSource) {
-        var model = {
-            UserID: currentUserID,
-            EmailAddress: currentEmailAddress,
-            TimeStamp: currentTimeStamp,
-            WebRequestID: currentWebRequestID,
-            MethodName: currentMethodName,
-            Source: currentSource,
-        };
-
-        $.ajax({
-            method: "POST",
-            url: "@Url.Action("MarkUnimportant", "LogException")",
-            dataType: "json",
-            data: {
-                logToUpdate: model,
-            },
-
-            success: function (result) {
-                currentUserID = null;
-                currentEmailAddress = null;
-                currentTimeStamp = null;
-                currentWebRequestID = null;
-                currentMethodName = null;
-                currentSource = null;
-
-                if (result.IsCreated) {
-                    window.location.reload();
-                }
-                else {
-                    alert(result.ErrorMessage);
-                }
-            },
-
-            error: function (result) {
-                alert(result.ErrorMessage);
-            }
-        });
     };
 </script>
 
